# ej-math

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pypirc  .travis.yml  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  setup.cfg  tasks.py  tox.ini
docs/: apidoc.rst  index.rst  make.bat  warning.rst
src/: __init__.py
src/pushtogether_math/: __init__.py  cluster.py  data_converter.py  decomposer.py  kmeans.py
tests/: conftest.py  test_cluster.py
