[bumpversion]
current_version = 0.1.0
commit = True

[metadata]
name = pushtogether-math
version = '0.1.0'
description = The Pushing Together Kmeans clustering tool
long_description = file: README.rst

author = Luan Guimarães Lacerda
author_email = luang@protonmail.ch
url = https://gitlab.com/empurrandojuntos/pushtogether-math

keywords =
  machinelearning
  pushingtogether
  pushtogether
  kmeans
  clustering
  math
license = GNU General Public License (GPL)
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries


[options]
zip_safe = False
platforms = any
include_package_data = True
install_requires =
    unidecode
    scikit-learn
    numpy
    scipy
    pandas
setup_requires =
    setuptools >= 30.3.0


[options.extras_require]
dev =
    pytest
    pytest-cov
    coverage
    flake8
docs =
    docutils
    sphinx-autobuild


[egg_info]
tag_build = 0
tag_date = 0
tag_svn_revision = 0


[flake8]
# E501: line > 79 characters
# E731: do not assign a lambda expression, use a def
ignore = E501, E731
exclude = .git,__pycache__,docs/conf.py,build,dist,tests,src/**/__init__.py,src/**/all.py
max-complexity = 10


[pep8]
ignore = E501,E731
max-line-length = 80

[bumpversion:file:src/pushtogether_math/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:setup.cfg]
search = version = '{current_version}'
replace = version = '{new_version}'
